trunk/Archive2/3a/723ef855e62ba6/output
main.cpp:1:1: error: 'cout' in namespace 'std' does not name a type
 std::cout << 123.456e-67 << '\n'
 ^
